fix math/PowerSet.java: Objectification